--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,14 @@
 <% layout('layout') -%>
+
 <% script('jquery/dist/jquery.min.js') -%>
 <% script('bootstrap/dist/js/bootstrap.min.js') -%>
 <% script('jquery-resizable/dist/jquery-resizable.min.js') -%>
 <% script('ace-builds/src/ace.js') -%>
 <% script('custom/js/index.js') -%>
+
 <% stylesheet('normalize-css/normalize.css') -%>
 <% stylesheet('bootstrap/dist/css/bootstrap.min.css') -%>
-
+<% stylesheet('font-awesome/css/font-awesome.css') -%>
 <% stylesheet('custom/css/index.css') -%>
 
 <script>
@@ -17,8 +19,11 @@ console.log("works...");
      <div class="navbar-header">
       <a class="navbar-brand" href="http://chapel.cray.com/">Chapel Online</a>
      </div>
+     <ul class="nav navbar-nav navbar-left control">
+      <button type="button" id="run" class="btn btn-default navbar-btn"><strong>Run</strong><i class="fa fa-caret-right fa-fw" aria-hidden="true"></i> </button>
+     </ul>
      <ul class="nav navbar-nav navbar-right">
-      <li><a href="https://github.com/m-nikhil">Crafted with LOVE by m-nikhil@github</a></li>
+      <li><a href="https://github.com/m-nikhil">Crafted with <i class="fa fa-heart" aria-hidden="true"></i> by m-nikhil@github</a></li>
      </ul>
   </div>
 </nav>
@@ -27,10 +32,7 @@ console.log("works...");
 
            <div class="panel-left"> 
                 <div id="editor">
-                   function foo(items) {
-		var x ="All this is syntax highlighted";
-		return x;
-		}
+Code goes here...
                 </div>
              
             </div>
@@ -39,7 +41,7 @@ console.log("works...");
             </div>
 
             <div class="panel-right">
-                <textarea id="output" readonly>Output here...</textarea>
+                <textarea id="output" placeholder="Output here..." readonly></textarea>
             </div>
 </div>
 
