--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,13 @@
+
 <% layout('layout') -%>
 
+<% script('/socket.io/socket.io.js') -%>
 <% script('jquery/dist/jquery.min.js') -%>
 <% script('bootstrap/dist/js/bootstrap.min.js') -%>
 <% script('jquery-resizable/dist/jquery-resizable.min.js') -%>
 <% script('ace-builds/src/ace.js') -%>
 <% script('custom/js/index.js') -%>
+
 
 <% stylesheet('normalize-css/normalize.css') -%>
 <% stylesheet('bootstrap/dist/css/bootstrap.min.css') -%>
@@ -19,9 +22,15 @@ console.log("works...");
      <div class="navbar-header">
       <a class="navbar-brand" href="http://chapel.cray.com/">Chapel Online</a>
      </div>
-     <ul class="nav navbar-nav navbar-left control">
-      <button type="button" id="run" class="btn btn-default navbar-btn"><strong>Run</strong><i class="fa fa-caret-right fa-fw" aria-hidden="true"></i> </button>
-     </ul>
+     <ul class="nav navbar-nav navbar
+-left controDl">
+     
+<button type="button" id="run" class="btn btn-default navbar-btn"><strong>Run</strong></button>
+<button type="button" id="pause" onclick="pause()" class="btn btn-default navbar-btn"><strong>Pause</strong></button>
+<button type="button" id="resume" onclick="resume()" class="btn btn-default navbar-btn"><strong>Resume</strong></i></button>   
+<button type="button" id="stop" onclick="stop()" class="btn btn-default navbar-btn"><strong>Stop</strong></i></button>
+
+    </ul>
      <ul class="nav navbar-nav navbar-right">
       <li><a href="https://github.com/m-nikhil">Crafted with <i class="fa fa-heart" aria-hidden="true"></i> by m-nikhil@github</a></li>
      </ul>
@@ -31,8 +40,14 @@ console.log("works...");
 <div class="panel-container">
 
            <div class="panel-left"> 
-                <div id="editor">
-Code goes here...
+                <div id="editor">use Time; 
+var line: string = stdin.readln(string); 
+writeln("You typed : ",line);
+sleep(3);
+for i in {1..10} do { 
+writeln("count #",i); 
+sleep(3);
+}
                 </div>
              
             </div>
@@ -41,8 +56,20 @@ Code goes here...
             </div>
 
             <div class="panel-right">
-                <textarea id="output" placeholder="Output here..." readonly></textarea>
-            </div>
-</div>
+		<div class="panel-container-vertical">
+			<div class="panel-top"> 
+               			 <textarea id="output" placeholder="Output here..." readonly></textarea>
+           		</div>
+	
+			<div class="splitter-horizontal">
+        		 </div>
+
+			<div class="panel-bottom">
+				<textarea id="input" placeholder="Input here...">Program-to-loop-1-to-10-with-interval</textarea>
+			</div>
+
+		 </div>
+	   </div>
+
 
   
